--- a/css/stylesheet-customizations.scss
+++ b/css/stylesheet-customizations.scss
@@ -7,16 +7,16 @@
 
 // Customize the background color
 body {
-  background: linear-gradient(to bottom right, lime, whitesmoke);
+  background: linear-gradient(to bottom right, orange, whitesmoke);
 }
 
 // Customize the menubar color
 .ui.menu {
-  background: lime;
+  background: orange;
 }
 
 // Customize the home page icon colors
 .icon-color {
-  color: darken(lime, 20%);
+  color: darken(orange, 20%);
 }
 
