--- a/css/stylesheet-customizations.scss
+++ b/css/stylesheet-customizations.scss
@@ -7,16 +7,15 @@
 
 // Customize the background color
 body {
-  background: linear-gradient(to bottom right, orange, whitesmoke);
+  background-color: lightsteelblue;
 }
 
 // Customize the menubar color
 .ui.menu {
-  background: orange;
+  background: lightskyblue;
 }
 
 // Customize the home page icon colors
 .icon-color {
-  color: darken(orange, 20%);
+  color: darken(lightsteelblue, 20%);
 }
-
