--- a/css/stylesheet-customizations.scss
+++ b/css/stylesheet-customizations.scss
@@ -7,12 +7,12 @@
 
 // Customize the background color
 body {
-  background-color: lightsteelblue;
+  background: linear-gradient(to bottom right, lightskyblue, whitesmoke);
 }
 
 // Customize the menubar color
 .ui.menu {
-  background: darken(lightsteelblue, 10%);
+  background: lightskyblue;
 }
 
 // Customize the home page icon colors
