--- a/css/stylesheet-customizations.scss
+++ b/css/stylesheet-customizations.scss
@@ -7,7 +7,7 @@
 
 // Customize the background color
 body {
-  background: linear-gradient(lightskyblue, whitesmoke);
+  background: linear-gradient(to bottom right, lightskyblue, whitesmoke);
 }
 
 // Customize the menubar color
